Prevent content from going behind top bar, hopefully

--- a/docs/styles/style-dev.css
+++ b/docs/styles/style-dev.css
@@ -22,11 +22,13 @@ html {
 }
 
 body {
+  margin: 0;
   border-top: 4px solid var(--accent);
   font-family: 'Outfit', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
   background-color: transparent;
   color: var(--text);
   padding: 5px;
+  padding-top: calc(5px + env(safe-area-inset-top));
   display: flex;
   flex-direction: column;
   align-items: center;
